--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 		</style>
 		
 		<link href="/_app/immutable/assets/2.09dd8c8d.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.4c74b492.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.51b2370f.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.e108d1fd.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.a8fca953.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.317a432f.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.43a00871.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.9a71b161.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.a21d6cee.js">
 		<link rel="modulepreload" href="/_app/immutable/nodes/0.cc2a4f72.js">
 		<link rel="modulepreload" href="/_app/immutable/nodes/2.add0d290.js">
@@ -36,7 +36,7 @@
 			
 			<script>
 				{
-					__sveltekit_9j41a5 = {
+					__sveltekit_17buc = {
 						base: "",
 						env: {}
 					};
@@ -46,8 +46,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/_app/immutable/entry/start.4c74b492.js"),
-						import("/_app/immutable/entry/app.317a432f.js")
+						import("/_app/immutable/entry/start.51b2370f.js"),
+						import("/_app/immutable/entry/app.9a71b161.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
