--- a/index.html
+++ b/index.html
@@ -20,23 +20,44 @@
 				padding: 0;
 				background-color: black;
 			}
+			.miles {
+				border: 5px double transparent;
+				background-image: linear-gradient(black, black), 
+				linear-gradient(
+					90deg,
+					rgba(255, 0, 0, 1) 0%,
+					rgba(255, 154, 0, 1) 10%,
+					rgba(208, 222, 33, 1) 20%,
+					rgba(79, 220, 74, 1) 30%,
+					rgba(63, 218, 216, 1) 40%,
+					rgba(47, 201, 226, 1) 50%,
+					rgba(28, 127, 238, 1) 60%,
+					rgba(95, 21, 242, 1) 70%,
+					rgba(186, 12, 248, 1) 80%,
+					rgba(251, 7, 217, 1) 90%,
+					rgba(255, 0, 0, 1) 100%
+				);
+				border-image-slice: 1; 
+				background-origin: border-box;
+				background-clip: content-box, border-box;
+			}
 		</style>
 		
 		<link href="/_app/immutable/assets/2.09dd8c8d.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.51b2370f.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.22d52940.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.e108d1fd.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.43a00871.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.9a71b161.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.2cac421d.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.6e11c5b8.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.a21d6cee.js">
 		<link rel="modulepreload" href="/_app/immutable/nodes/0.cc2a4f72.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/2.add0d290.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/2.a8a783d6.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">  <div class="outer container svelte-i1yqa2" data-svelte-h="svelte-uy4ipl"><div class="inner container svelte-i1yqa2"><div class="planetary-body svelte-i1yqa2" style="background-color: white; width: 300px; min-height: 300px;"><p style="font-size: 5em">Sol</p></div> <a class="planetary-body svelte-i1yqa2" href="alter/dominic" style="background-color: grey; width: 175px; min-height: 175px;"><p style="font-size: 2em">Dominic</p></a> <a class="planetary-body svelte-i1yqa2" href="alter/colby" style="background-color: yellow; width: 75px; min-height: 75px; transform: translate(60px, -30px);"><p style="font-size: 1em">Colby</p></a> <a class="planetary-body svelte-i1yqa2" href="alter/audrey" style="background-color: red; width: 175px; min-height: 175px;"><p style="font-size: 2em">Audrey</p></a> <a class="planetary-body svelte-i1yqa2" href="alter/trinity" style="background-color: pink; width: 75px; min-height: 75px; transform: translate(-60px, -30px);"><p style="font-size: 1em">Trinity</p></a> <a class="planetary-body svelte-i1yqa2" href="alter/amp" style="background-color: green; width: 175px; min-height: 175px;"><p style="font-size: 2em">Amp</p></a> <a class="planetary-body svelte-i1yqa2" href="/alter/aurora" style="background-color: #FF5B00; width: 175px; min-height: 175px;"><p style="font-size: 2em">Aurora</p></a> <a class="planetary-body svelte-i1yqa2" href="/alter/abyss" style="background-color: black; border: 4px solid white; width: 175px; min-height: 175px;"><p style="color: white; font-size: 2em">Abyss</p></a> <a class="planetary-body svelte-i1yqa2" href="/alter/two" style="background-color: black; border: 4px solid white; width: 175px; min-height: 175px;"><p style="color: white; font-size: 2em">2</p></a> <a class="planetary-body svelte-i1yqa2" href="/alter/six" style="background-color: black; border: 4px solid white; width: 175px; min-height: 175px;"><p style="color: white; font-size: 2em">6</p></a> <a class="planetary-body svelte-i1yqa2" href="/alter/seventeen" style="background-color: black; border: 4px solid white; width: 175px; min-height: 175px;"><p style="color: white; font-size: 2em">17</p></a> <a class="planetary-body svelte-i1yqa2" href="/alter/one-eleven" style="background-color: black; border: 4px solid white; width: 175px; min-height: 175px;"><p style="color: white; font-size: 2em">111</p></a> <p style="font-size: 1.0em; color:white; font-family: lemonmilk;">more alter info coming soon...</p> <br> <p style="font-size: 1.0em; color:white; font-family: lemonmilk;">We find out more about the system everyday, so information is subject to drastic change.</p></div></div> 
+		<div style="display: contents">  <div class="outer container svelte-i1yqa2" data-svelte-h="svelte-mhxgnm"><div class="inner container svelte-i1yqa2"><div class="planetary-body svelte-i1yqa2" style="background-color: white; width: 300px; min-height: 300px;"><p style="font-size: 5em">Sol</p></div> <a class="planetary-body svelte-i1yqa2" href="alter/amp" style="background-color: green; width: 175px; min-height: 175px;"><p style="font-size: 2em">Amp</p></a> <a class="planetary-body svelte-i1yqa2" href="/alter/aurora" style="background-color: #FF5B00; width: 175px; min-height: 175px;"><p style="font-size: 2em">Aurora</p></a> <a class="planetary-body miles svelte-i1yqa2" href="/alter/miles" style="background-color: black; width: 175px; min-height: 175px;"><p style="color: white; font-size: 2em">Miles</p></a> <a class="planetary-body svelte-i1yqa2" href="alter/dominic" style="background-color: grey; width: 175px; min-height: 175px;"><p style="font-size: 2em">Dominic</p></a> <a class="planetary-body svelte-i1yqa2" href="alter/colby" style="background-color: yellow; width: 75px; min-height: 75px; transform: translate(60px, -30px);"><p style="font-size: 1em">Colby</p></a> <a class="planetary-body svelte-i1yqa2" href="alter/audrey" style="background-color: red; width: 175px; min-height: 175px;"><p style="font-size: 2em">Audrey</p></a> <a class="planetary-body svelte-i1yqa2" href="alter/trinity" style="background-color: pink; width: 75px; min-height: 75px; transform: translate(-60px, -30px);"><p style="font-size: 1em">Trinity</p></a> <a class="planetary-body svelte-i1yqa2" href="/alter/two" style="background-color: black; border: 4px solid white; width: 175px; min-height: 175px;"><p style="color: white; font-size: 2em">2</p></a> <a class="planetary-body svelte-i1yqa2" href="/alter/six" style="background-color: black; border: 4px solid white; width: 175px; min-height: 175px;"><p style="color: white; font-size: 2em">6</p></a> <a class="planetary-body svelte-i1yqa2" href="/alter/seventeen" style="background-color: black; border: 4px solid white; width: 175px; min-height: 175px;"><p style="color: white; font-size: 2em">17</p></a> <a class="planetary-body svelte-i1yqa2" href="/alter/one-eleven" style="background-color: black; border: 4px solid white; width: 175px; min-height: 175px;"><p style="color: white; font-size: 2em">111</p></a> <p style="font-size: 1.0em; color:white; font-family: lemonmilk;">more alter info coming soon...</p> <br> <p style="font-size: 1.0em; color:white; font-family: lemonmilk;">We find out more about the system everyday, so information is subject to drastic change.</p></div></div> 
 			
 			<script>
 				{
-					__sveltekit_17buc = {
+					__sveltekit_1t8k9zy = {
 						base: "",
 						env: {}
 					};
@@ -46,8 +67,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/_app/immutable/entry/start.51b2370f.js"),
-						import("/_app/immutable/entry/app.9a71b161.js")
+						import("/_app/immutable/entry/start.22d52940.js"),
+						import("/_app/immutable/entry/app.6e11c5b8.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
