--- a/alter/trinity.html
+++ b/alter/trinity.html
@@ -44,10 +44,10 @@
 		</style>
 		
 		<link href="/_app/immutable/assets/Alter.5f43590a.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.22d52940.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.90d54e02.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.e108d1fd.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.2cac421d.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.6e11c5b8.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.efdf01f0.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.66e93421.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.a21d6cee.js">
 		<link rel="modulepreload" href="/_app/immutable/nodes/0.cc2a4f72.js">
 		<link rel="modulepreload" href="/_app/immutable/nodes/12.607408ec.js">
@@ -58,7 +58,7 @@
 			
 			<script>
 				{
-					__sveltekit_1t8k9zy = {
+					__sveltekit_qurjeg = {
 						base: "",
 						env: {}
 					};
@@ -68,8 +68,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/_app/immutable/entry/start.22d52940.js"),
-						import("/_app/immutable/entry/app.6e11c5b8.js")
+						import("/_app/immutable/entry/start.90d54e02.js"),
+						import("/_app/immutable/entry/app.66e93421.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 12],
