--- a/alter/aurora.html
+++ b/alter/aurora.html
@@ -43,24 +43,23 @@
 			}
 		</style>
 		
-		<link href="/_app/immutable/assets/Alter.5f43590a.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.335d4352.js">
+		<link href="/_app/immutable/assets/common.67122a06.css" rel="stylesheet">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.976bd9e6.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.e108d1fd.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.d0077cd8.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.8b7ede40.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.0e5b9986.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.7e891d83.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.a21d6cee.js">
 		<link rel="modulepreload" href="/_app/immutable/nodes/0.cc2a4f72.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/5.f6f89e0e.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/Alter.98716ee0.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/common.d6240f3d.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/4.db113503.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/common.547c3d9b.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">  <a href="/" class="go-back svelte-1wbcl0j" data-svelte-h="svelte-k8hnu"><img src="/back-arrow.png" class="svelte-1wbcl0j"></a> <div class="container outer svelte-1wbcl0j"><div class="container image svelte-1wbcl0j"><span slot="image" data-svelte-h="svelte-1b0anxz"><img src="/aurora.jpg"></span></div> <div class="container info svelte-1wbcl0j"><div class="container basic svelte-1wbcl0j"><div class="fact svelte-1wbcl0j" style="border-right: 4px solid white;"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-11lpxx1"><p class="svelte-1wbcl0j">Name</p></span> <p style="width: 100%; text-align: center;"><span slot="name" data-svelte-h="svelte-l12sm0">Aurora</span></p></div> <div class="fact svelte-1wbcl0j"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-1r6we22"><p class="svelte-1wbcl0j">Role</p></span> <p style="width: 100%; text-align: center;"><span slot="role" data-svelte-h="svelte-1r23qr7">Caretaker</span></p></div></div> <div class="container basic-two svelte-1wbcl0j"><div class="fact svelte-1wbcl0j" style="border-right: 4px solid white;"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-1b83z5l"><p class="svelte-1wbcl0j">Age</p></span> <p style="width: 100%; text-align: center;"><span slot="age">21</span></p></div> <div class="fact svelte-1wbcl0j" style="border-right: 4px solid white;"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-lhrs6b"><p class="svelte-1wbcl0j">Gender</p></span> <p style="width: 100%; text-align: center;"><span slot="gender" data-svelte-h="svelte-91g6fk">Woman</span></p></div> <div class="fact svelte-1wbcl0j"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-32b5g2"><p class="svelte-1wbcl0j">Sexuality</p></span> <p style="width: 100%; text-align: center;"><span slot="sexuality" data-svelte-h="svelte-svhbpk">Pansexual</span></p></div></div> <div class="container basic-two svelte-1wbcl0j"><div class="fact svelte-1wbcl0j" style="border-right: 4px solid white;"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-1b7js59"><p class="svelte-1wbcl0j">Color</p></span> <span slot="color" data-svelte-h="svelte-13uuum5"><div class="color" style="background-color: #FF5B00"></div></span></div> <div class="fact svelte-1wbcl0j" style="border-right: 4px solid white;"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-rwh243"><p class="svelte-1wbcl0j">Song</p></span> <p style="width: 100%; text-align: center;"><span slot="song" data-svelte-h="svelte-d0j0bq">In The Night - The Weeknd</span></p></div> <div class="fact svelte-1wbcl0j"><span class="title svelte-1wbcl0j" data-svelte-h="svelte-sytfha"><p class="svelte-1wbcl0j">Food</p></span> <p style="width: 100%; text-align: center;"><span slot="food" data-svelte-h="svelte-dry0am">Hummus</span></p></div></div> <div class="description svelte-1wbcl0j"><p class="description-title svelte-1wbcl0j" data-svelte-h="svelte-1ffp0ht">About Me</p> <p class="explain svelte-1wbcl0j"><span slot="description" data-svelte-h="svelte-4fbmeg">I love life, the universe, and everything to a fault 😂! I am soft spoken and like to imagine myself as smaller than the body. 
-        I like to dance, sing. I thrive when my environment is tidy and my body is clean. I love to cook and eat; hopefully all that hummus goes to my hips!</span></p></div></div> </div> 
+		<div style="display: contents">  <div id="outer-container" class="svelte-8lkq1v"><div class="flex-pad svelte-8lkq1v"></div> <div id="data-container" class="svelte-8lkq1v"><a class="back" href="/" data-svelte-h="svelte-1ifnzag">⬅️ Home</a> <h1><span slot="name" data-svelte-h="svelte-l12sm0">Aurora</span></h1> <div class="image-container svelte-8lkq1v"><span slot="image" data-svelte-h="svelte-1b0anxz"><img src="/aurora.jpg"></span></div> <span class="vertical-padding svelte-8lkq1v"></span> <div id="info-container" class="svelte-8lkq1v"><div id="inner-container"><h2 data-svelte-h="svelte-1cxftya">Role</h2> <p><span slot="role" data-svelte-h="svelte-1r23qr7">Caretaker</span></p></div></div> <div id="info-container" class="svelte-8lkq1v"><div id="inner-container"><h2 data-svelte-h="svelte-todr4b">Age</h2> <p><span slot="age">21</span></p></div></div> <div id="info-container" class="svelte-8lkq1v"><div id="inner-container"><h2 data-svelte-h="svelte-1lugiyb">Gender</h2> <p><span slot="gender" data-svelte-h="svelte-91g6fk">Woman</span></p></div></div> <div id="info-container" class="svelte-8lkq1v"><div id="inner-container"><h2 data-svelte-h="svelte-znkn7e">Pronouns</h2> <p><span slot="pronouns" data-svelte-h="svelte-gc3tew">she/her/hers</span></p></div></div> <div id="info-container" class="svelte-8lkq1v"><div id="inner-container"><h2 data-svelte-h="svelte-jdjxs4">Sexuality</h2> <p><span slot="sexuality" data-svelte-h="svelte-svhbpk">Pansexual</span></p></div></div> <h2 data-svelte-h="svelte-vd6tv5">Favorites</h2> <h3 data-svelte-h="svelte-1hlz3iz">Color</h3> <div class="image-container svelte-8lkq1v" style="height: 100px"><span slot="color" data-svelte-h="svelte-13uuum5"><div class="color" style="background-color: #FF5B00"></div></span></div> <div id="info-container" class="svelte-8lkq1v"><div id="inner-container"><h3 data-svelte-h="svelte-6ruj0x">Song</h3> <p><span slot="song" data-svelte-h="svelte-tmfebv">-</span></p></div></div> <div id="info-container" class="svelte-8lkq1v"><div id="inner-container"><h3 data-svelte-h="svelte-vc6z04">Food</h3> <p><span slot="food" data-svelte-h="svelte-dry0am">Hummus</span></p></div></div> <div id="info-container" class="svelte-8lkq1v"><div id="inner-container"><h2 data-svelte-h="svelte-hqk62g">Description</h2> <p><span slot="description" data-svelte-h="svelte-4fbmeg">I love life, the universe, and everything to a fault 😂! I am soft spoken and like to imagine myself as smaller than the body. 
+        I like to dance, sing. I thrive when my environment is tidy and my body is clean. I love to cook and eat; hopefully all that hummus goes to my hips!</span></p></div></div> <div class="flex-pad svelte-8lkq1v"></div></div> <div class="flex-pad svelte-8lkq1v"></div> </div> 
 			
 			<script>
 				{
-					__sveltekit_9ajstx = {
+					__sveltekit_1rkecx = {
 						base: "",
 						env: {}
 					};
@@ -70,11 +69,11 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/_app/immutable/entry/start.335d4352.js"),
-						import("/_app/immutable/entry/app.8b7ede40.js")
+						import("/_app/immutable/entry/start.976bd9e6.js"),
+						import("/_app/immutable/entry/app.7e891d83.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
-							node_ids: [0, 5],
+							node_ids: [0, 4],
 							data,
 							form: null,
 							error: null
