--- a/index.html
+++ b/index.html
@@ -43,21 +43,21 @@
 			}
 		</style>
 		
-		<link href="/_app/immutable/assets/2.09b96b39.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.37c3d082.js">
+		<link href="/_app/immutable/assets/2.b5d625e1.css" rel="stylesheet">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.4d13f337.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.e108d1fd.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.3e603344.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.953c204b.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.be88998f.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.60402247.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.a21d6cee.js">
 		<link rel="modulepreload" href="/_app/immutable/nodes/0.cc2a4f72.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/2.17e32c42.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/2.9e706a5d.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">  <div class="outer container svelte-rrs9z0" data-svelte-h="svelte-1i3mxwq"><div class="inner container svelte-rrs9z0"><div class="planetary-body svelte-rrs9z0" style="background-color: white; width: 300px; min-height: 300px;"><p style="font-size: 5em">Sol</p></div> <a class="planetary-body svelte-rrs9z0" href="alter/amp" style="background-color: green; width: 175px; min-height: 175px;"><p style="font-size: 2em">Amp</p></a> <a class="planetary-body svelte-rrs9z0" href="/alter/aurora" style="background-color: #FF5B00; width: 175px; min-height: 175px;"><p style="font-size: 2em">Aurora</p></a> <a class="planetary-body miles svelte-rrs9z0" href="/alter/miles" style="background-color: black; width: 175px; min-height: 175px;"><p style="color: white; font-size: 2em">Miles</p></a> <br> <p style="font-size: 1.0em; color:white; font-family: lemonmilk;">more alter info coming soon...</p> <br> <p style="font-size: 1.0em; color:white; font-family: lemonmilk;">only alters that have fronted and chosen to identify themselves on this website are listed</p> <br> <p style="font-size: 1.0em; color:white; font-family: lemonmilk;">We find out more about the system everyday, so information is subject to drastic change.</p></div></div> 
+		<div style="display: contents">  <div class="outer container svelte-10bjnh" data-svelte-h="svelte-7ikop7"><div class="inner container svelte-10bjnh"><div class="planetary-body svelte-10bjnh" style="background-color: white; width: 300px; min-height: 300px;"><h1 style="font-size: 5em">Sol</h1> <h2 style="font-size: 2em">(system)</h2></div> <span class="gap svelte-10bjnh"></span> <div class="alter container svelte-10bjnh"><div class="planet container svelte-10bjnh"><a class="planetary-body svelte-10bjnh" href="alter/amp" style="background-color: green; width: 175px; min-height: 175px;"><h2 style="font-size: 2em">Amp</h2></a> <span class="gap svelte-10bjnh"></span> <a class="planetary-body svelte-10bjnh" href="/alter/aurora" style="background-color: #FF5B00; width: 175px; min-height: 175px;"><h2 style="font-size: 2em">Aurora</h2></a> <span class="gap svelte-10bjnh"></span> <a class="planetary-body miles svelte-10bjnh" href="/alter/miles" style="background-color: black; width: 175px; min-height: 175px;"><h2 style="color: white; font-size: 2em">Miles</h2></a></div> <div class="friends svelte-10bjnh"><h1 class="svelte-10bjnh">sub-system headmates</h1> <span class="bar one svelte-10bjnh"></span> <span class="bar two"><span class="middle svelte-10bjnh"></span></span> <span class="bar three svelte-10bjnh"></span></div> <div class="amp-aurora svelte-10bjnh"><h1 class="svelte-10bjnh">in-sys relationship</h1> <span class="bar one svelte-10bjnh"></span> <span class="bar two svelte-10bjnh"></span></div></div> <span class="gap svelte-10bjnh"></span> <br> <p style="font-size: 1.0em; color:white; font-family: lemonmilk;">more alter info coming soon...</p> <br> <p style="font-size: 1.0em; color:white; font-family: lemonmilk;">only alters that have fronted and chosen to identify themselves on this website are listed</p> <br> <p style="font-size: 1.0em; color:white; font-family: lemonmilk;">We find out more about the system everyday, so information is subject to drastic change.</p></div></div> 
 			
 			<script>
 				{
-					__sveltekit_1tg0x96 = {
+					__sveltekit_u2injx = {
 						base: "",
 						env: {}
 					};
@@ -67,8 +67,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/_app/immutable/entry/start.37c3d082.js"),
-						import("/_app/immutable/entry/app.953c204b.js")
+						import("/_app/immutable/entry/start.4d13f337.js"),
+						import("/_app/immutable/entry/app.60402247.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
