--- a/alter/miles.html
+++ b/alter/miles.html
@@ -44,21 +44,21 @@
 		</style>
 		
 		<link href="/_app/immutable/assets/common.67122a06.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.37c3d082.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.4d13f337.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.e108d1fd.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.3e603344.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.953c204b.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.be88998f.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.60402247.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.a21d6cee.js">
 		<link rel="modulepreload" href="/_app/immutable/nodes/0.cc2a4f72.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/5.04f9c123.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/5.2e6c447f.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/common.547c3d9b.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">  <div id="outer-container" class="svelte-8lkq1v"><div class="flex-pad svelte-8lkq1v"></div> <div id="data-container" class="svelte-8lkq1v"><a class="back" href="/" data-svelte-h="svelte-1ifnzag">⬅️ Home</a> <h1><span slot="name" data-svelte-h="svelte-hgq6i6">Miles</span></h1> <div class="image-container svelte-8lkq1v"><span slot="image" data-svelte-h="svelte-hdk8ml"><img src="/miles.jpg"></span></div> <span class="vertical-padding svelte-8lkq1v"></span> <div id="info-container" class="svelte-8lkq1v"><div id="inner-container"><h2 data-svelte-h="svelte-1cxftya">Role</h2> <p><span slot="role" data-svelte-h="svelte-znh3wp">Protector</span></p></div></div> <div id="info-container" class="svelte-8lkq1v"><div id="inner-container"><h2 data-svelte-h="svelte-todr4b">Age</h2> <p><span slot="age">21</span></p></div></div> <div id="info-container" class="svelte-8lkq1v"><div id="inner-container"><h2 data-svelte-h="svelte-1lugiyb">Gender</h2> <p><span slot="gender" data-svelte-h="svelte-2iv296">Man</span></p></div></div> <div id="info-container" class="svelte-8lkq1v"><div id="inner-container"><h2 data-svelte-h="svelte-znkn7e">Pronouns</h2> <p><span slot="pronouns" data-svelte-h="svelte-15lwoky">he/him/his</span></p></div></div> <div id="info-container" class="svelte-8lkq1v"><div id="inner-container"><h2 data-svelte-h="svelte-jdjxs4">Sexuality</h2> <p><span slot="sexuality" data-svelte-h="svelte-1rbjriv">Pretty sure I am gay tho</span></p></div></div> <h2 data-svelte-h="svelte-vd6tv5">Favorites</h2> <h3 data-svelte-h="svelte-1hlz3iz">Color</h3> <div class="image-container svelte-8lkq1v" style="height: 100px"><span slot="color" style="width: 100%; height: 100%; position: relative;" data-svelte-h="svelte-1vkqb80"><div class="color miles" style="z-order: 1000; border-radius: 100px; width: 100%; height: 100%; background-color: black; box-sizing: border-box;"></div></span></div> <div id="info-container" class="svelte-8lkq1v"><div id="inner-container"><h3 data-svelte-h="svelte-6ruj0x">Song</h3> <p><span slot="song" data-svelte-h="svelte-owg8hm">Blinding Lights - The Weeknd</span></p></div></div> <div id="info-container" class="svelte-8lkq1v"><div id="inner-container"><h3 data-svelte-h="svelte-vc6z04">Food</h3> <p><span slot="food" data-svelte-h="svelte-kldoje">-</span></p></div></div> <div id="info-container" class="svelte-8lkq1v"><div id="inner-container"><h2 data-svelte-h="svelte-hqk62g">Description</h2> <p><span slot="description" data-svelte-h="svelte-1nox1a1">I protect the system from the dangers of the night, and have recently been hosting. Favorite color is rainbow black.</span></p></div></div> <div class="flex-pad svelte-8lkq1v"></div></div> <div class="flex-pad svelte-8lkq1v"></div> </div> 
+		<div style="display: contents">  <div id="outer-container" class="svelte-8lkq1v"><div class="flex-pad svelte-8lkq1v"></div> <div id="data-container" class="svelte-8lkq1v"><a class="back" href="/" data-svelte-h="svelte-1ifnzag">⬅️ Home</a> <h1><span slot="name" data-svelte-h="svelte-hgq6i6">Miles</span></h1> <div class="image-container svelte-8lkq1v"><span slot="image" data-svelte-h="svelte-hdk8ml"><img src="/miles.jpg"></span></div> <span class="vertical-padding svelte-8lkq1v"></span> <div id="info-container" class="svelte-8lkq1v"><div id="inner-container"><h2 data-svelte-h="svelte-1cxftya">Role</h2> <p><span slot="role" data-svelte-h="svelte-znh3wp">Protector</span></p></div></div> <div id="info-container" class="svelte-8lkq1v"><div id="inner-container"><h2 data-svelte-h="svelte-todr4b">Age</h2> <p><span slot="age">21</span></p></div></div> <div id="info-container" class="svelte-8lkq1v"><div id="inner-container"><h2 data-svelte-h="svelte-1lugiyb">Gender</h2> <p><span slot="gender" data-svelte-h="svelte-2iv296">Man</span></p></div></div> <div id="info-container" class="svelte-8lkq1v"><div id="inner-container"><h2 data-svelte-h="svelte-znkn7e">Pronouns</h2> <p><span slot="pronouns" data-svelte-h="svelte-15lwoky">he/him/his</span></p></div></div> <div id="info-container" class="svelte-8lkq1v"><div id="inner-container"><h2 data-svelte-h="svelte-jdjxs4">Sexuality</h2> <p><span slot="sexuality" data-svelte-h="svelte-14ueloj">Gay / Gray Ace</span></p></div></div> <h2 data-svelte-h="svelte-vd6tv5">Favorites</h2> <h3 data-svelte-h="svelte-1hlz3iz">Color</h3> <div class="image-container svelte-8lkq1v" style="height: 100px"><span slot="color" style="width: 100%; height: 100%; position: relative;" data-svelte-h="svelte-1vkqb80"><div class="color miles" style="z-order: 1000; border-radius: 100px; width: 100%; height: 100%; background-color: black; box-sizing: border-box;"></div></span></div> <div id="info-container" class="svelte-8lkq1v"><div id="inner-container"><h3 data-svelte-h="svelte-6ruj0x">Song</h3> <p><span slot="song" data-svelte-h="svelte-owg8hm">Blinding Lights - The Weeknd</span></p></div></div> <div id="info-container" class="svelte-8lkq1v"><div id="inner-container"><h3 data-svelte-h="svelte-vc6z04">Food</h3> <p><span slot="food" data-svelte-h="svelte-kldoje">-</span></p></div></div> <div id="info-container" class="svelte-8lkq1v"><div id="inner-container"><h2 data-svelte-h="svelte-hqk62g">Description</h2> <p><span slot="description" data-svelte-h="svelte-nmfeyk">I protect the system, and have recently been hosting. Favorite color is rainbow black.</span></p></div></div> <div class="flex-pad svelte-8lkq1v"></div></div> <div class="flex-pad svelte-8lkq1v"></div> </div> 
 			
 			<script>
 				{
-					__sveltekit_1tg0x96 = {
+					__sveltekit_u2injx = {
 						base: "",
 						env: {}
 					};
@@ -68,8 +68,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/_app/immutable/entry/start.37c3d082.js"),
-						import("/_app/immutable/entry/app.953c204b.js")
+						import("/_app/immutable/entry/start.4d13f337.js"),
+						import("/_app/immutable/entry/app.60402247.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 5],
