--- a/alter/amp.html
+++ b/alter/amp.html
@@ -44,10 +44,10 @@
 		</style>
 		
 		<link href="/_app/immutable/assets/common.67122a06.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.4d13f337.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.da146945.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.e108d1fd.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.be88998f.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.60402247.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.85338e33.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.61e07731.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.a21d6cee.js">
 		<link rel="modulepreload" href="/_app/immutable/nodes/0.cc2a4f72.js">
 		<link rel="modulepreload" href="/_app/immutable/nodes/3.bd8ec2ba.js">
@@ -58,7 +58,7 @@
 			
 			<script>
 				{
-					__sveltekit_u2injx = {
+					__sveltekit_aoplaw = {
 						base: "",
 						env: {}
 					};
@@ -68,8 +68,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("/_app/immutable/entry/start.4d13f337.js"),
-						import("/_app/immutable/entry/app.60402247.js")
+						import("/_app/immutable/entry/start.da146945.js"),
+						import("/_app/immutable/entry/app.61e07731.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
